--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
   }
 </style>
 
-  body { font-family: Arial, sans-serif; text-align: center; }
+  body: 
+  {font-family: Arial, sans-serif; text-align: center; }
   .music-player { margin: 20px; }
   .countdown { margin: 20px; }
   .countdown-input { margin: 5px; }
